--- a/Python/Python Study Notes/19. Modules.md
+++ b/Python/Python Study Notes/19. Modules.md
@@ -915,5 +915,37 @@ The names of the enclosing directories here make the module references unique.
 - notice that both of the two original systems’ imports will keep working un-changed. Because their home directories are searched first, the addition of the common root on the search path is irrelevant to code in system1 and system2; they can keep saying just `import utilities` and expect to find their own files when run as programs —though not when used as packages in 3.X, as the next section explains. If you’re careful to unpack all your Python systems under a common root like this, path configuration also becomes simple: you’ll only need to add the common root directory once.
 
 
-
 ### Package Relative Imports
+
+Python 2.X implicitly searches package directories first on imports, while 3.X requires explicit relative import syntax in order to import from the package directory.
+
+#### Changes in Python 3.X
+
+- It modifies the module import search path semantics to skip the package’s own directory by default. Imports check only paths on the `sys.path` search path. These are known as absolute imports.
+
+
+- It extends the syntax of `from` statements to allow them to explicitly request that imports search the package’s directory only, with leading dots. This is known as relative import syntax.
+
+The impact of this change is that in 3.X (and optionally in 2.X), you must generally use special `from` dotted syntax to import modules located in the same package as the im-porter, unless your imports list a complete path relative to a package root on `sys.path`, or your imports are relative to the always-searched home directory of the program’s top-level file (which is usually the current working directory).
+
+#### Relative Import Basics
+
+In both Python 3.X and 2.X, `from` statements can now use leading dots (“.”) to specify that they require modules located within the same package (known as package relative imports), instead of modules located elsewhere on the module import search path (called absolute imports). That is:
+
+- Imports with dots: In both Python 3.X and 2.X, you can use leading dots in `from` statements’ module names to indicate that imports should be relative-only to the containing package—such imports will search for modules inside the package directory only and will not look for same-named modules located elsewhere on the import search path (`sys.path`). The net effect is that package modules override outside modules.
+- Imports without dots: In Python 2.X, normal imports in a package’s code without leading dots currently default to a relative-then-absolute search path order—that is, the y search the package’s own directory first. However, in Python 3.X, normal imports within a package are absolute-only by default—in the absence of any special dot syntax, imports skip the containing package itself and look elsewhere on the `sys.path` search path.
+
+For **example**, in both Python 3.X and 2.X a statement of the form:
+
+```
+from . import spam		# Relative to this package
+```
+
+instructs Python to import a module named `spam` located in the same package directory as the file in which this statement appears. Similarly, this statement:
+
+```
+from .spam import name
+```
+
+means “from a module named `spam` located in the same package as the file that contains this statement, import the variable `name`.”
+
