--- a/Python/Python Study Notes/02. Basic.md
+++ b/Python/Python Study Notes/02. Basic.md
@@ -522,6 +522,12 @@ False
 
 ### Boolean Operations — [`and`](https://docs.python.org/3/reference/expressions.html#and), [`or`](https://docs.python.org/3/reference/expressions.html#or), [`not`](https://docs.python.org/3/reference/expressions.html#not)
 
+`and` 从左到右计算表达式，若所有值均为真，则返回最后一个值，若存在假，返回第一个假值。
+
+`or` 从左到右演算值。如果有一个值为真，立刻返回该值；若所有值都为假，返回最后一个假值。
+
+（`or` 在布尔上下文中会一直进行表达式演算直到找到第一个真值，然后就会忽略剩余的比较值）
+
 These are the Boolean operations, ordered by ascending priority:
 
 | Operation | Result                                   | Notes |
