--- a/Python/Python Study Notes/20. Class.md
+++ b/Python/Python Study Notes/20. Class.md
@@ -509,6 +509,166 @@ One overloading method we will use often here is the `__init__` constructor meth
 
 
 
+### Example
+
+```python
+>>> class rec: pass			# Empty namespace object
+... 
+>>> rec.name = 'Bob'		# Just objects with attributes
+>>> rec.age = 40
+>>> print(rec.name)			# Like a C struct or a record
+Bob
+>>> x = rec()				# Instances inherit class names
+>>> y = rec()
+>>> x.name, y.name			# name is stored on the class only
+('Bob', 'Bob')
+>>> x.name = 'Sue'			# But assignment changes x only
+>>> rec.name, x.name, y.name
+('Bob', 'Sue', 'Bob')
+```
+
+> these instances have no attributes of their own; they simply fetch the `name` attribute from the class object where it is stored. If we do assign an attribute to an instance, though, it creates (or changes) the attribute in that object, and no other—crucially, **attribute references kick off inheritance searches**, but **attribute assignments affect only the objects in which the assignments are made**.
+>
+
+the `__dict__` attribute is the namespace dictionary for most class-based objects. Some classes may also (or instead) define attributes in `__slots__`
+
+```python
+>>> rec.__dict__.keys()
+dict_keys(['name', '__module__', '__weakref__', 'age', '__dict__', '__doc__'])
+>>> list(rec.__dict__.keys())
+['name', '__module__', '__weakref__', 'age', '__dict__', '__doc__']
+>>> list(name for name in rec.__dict__ if not name.startswith('__'))
+['name', 'age']
+>>> list(x.__dict__.keys())
+['name']
+>>> list(y.__dict__.keys())
+[]
+```
+
+an attribute can often be fetched by either dictionary indexing or attribute notation, but only if it’s present on the object in question—**attribute notation kicks off inheritance search**, but indexing looks in the single object only
+
+```python
+>>> x.name, x.__dict__['name']			# Attributes present here are dict keys
+('Sue', 'Sue')
+>>> x.age								# But attribute fetch checks classes too
+40
+>>> x.__dict__['age']					# Indexing dict does not do inheritance
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+KeyError: 'age'
+```
+
+To facilitate inheritance search on attribute fetches, each instance has a link to its class that Python creates for us—it’s called `__class__`
+
+```python
+>>> x.__class__							# Instance to class link
+<class '__main__.rec'>
+```
+
+Classes also have a `__bases__` attribute, which is a tuple of references to their superclass objects. implied object root class in Python 3.X, get an empty tuple in 2.X instead
+
+```python
+>>> rec.__bases__				# Class to superclasses link, () in 2.X
+(<class 'object'>,)
+```
+
+These two attributes are how class trees are literally represented in memory by Python.
+
+Python’s class model is extremely dynamic. Classes and instances are just namespace objects, with attributes created on the fly by assignment. Those assignments usually happen within the `class` statements you code, but they can occur anywhere you have a reference to one of the objects in the tree.
+
+Even methods, normally created by a `def` nested in a `class`, can be created completely independently of any class object.
+
+```python
+>>> def uppername(obj):
+...     return obj.name.upper()			# Still needs a self argument (obj)
+... 
+>>> uppername(x) 						# Call as a simple function
+'SUE'		
+>>> rec.methord = uppername				# Now it's a class's method!
+>>> x.methord()							# Run method to process x
+'SUE'
+>>> y.methord()							# Same, but pass y to self
+'BOB'
+>>> rec.methord(x)						# Can call through instance or class
+'SUE'
+```
+
+OOP in Python really is mostly about looking up attributes in linked namespace objects.
+
+#### Records Revisited: Classes Versus Dictionaries
+
+classes package information like dictionaries, but can also bundle processing logic in the form of methods.
+
+> an example for tuple-and dictionary-based records
+>
+> ```python
+> >>> rec = ('Bob', 40.5, ['dev', 'mgr'])		# Tuple-based record
+> >>> print(rec[0])
+> Bob
+> >>> 
+> >>> rec = {}
+> >>> rec['name'] = 'Bob'						# Dictionary-based record
+> >>> rec['age'] = 40.5						# Or {...}, dict(n=v), etc.
+> >>> rec['jobs'] = ['dev', 'mgr']
+> >>> 
+> >>> print(rec['name'])
+> Bob
+> ```
+
+do the same with classes, trading keys for attributes:
+
+```
+>>> class rec: pass
+... 
+>>> rec.name = 'Bob'						# Class-based record
+>>> rec.age = 40.5
+>>> rec.jobs = ['dev', 'mgr']
+>>> 
+>>> print(rec.name)
+Bob
+```
+
+the `self` argument must always be explicit in Python methods. the explicit `self` argument, though, is to make the meanings of names more obvious: names not referenced through `self` are simple variables mapped to scopes, while names referenced through `self` with attribute notation are obviously instance attributes.
+
+```
+>>> class rec: pass
+
+>>> pers1 = rec()							# Instance-based records
+>>> pers1.name = 'Bob'
+>>> pers1.jobs = ['dev', 'mgr']
+>>> pers1.age = 40.5
+>>>
+>>> pers2 = rec()
+>>> pers2.name = 'Sue'
+>>> pers2.jobs = ['dev', 'cto']
+>>>
+>>> pers1.name, pers2.name 
+('Bob', 'Sue')
+```
+
+> Instances really are distinct namespaces, so each has a distinct attribute dictionary.
+
+**Example:**
+
+```python
+>>> class Person:
+...     def __init__(self, name, jobs, age=None):			# class = data + logic
+...         self.name = name
+...         self.jobs = jobs
+...         self.age = age
+...     def info(self):
+...         return(self.name, self.jobs)
+... 
+>>> rec1 = Person('Bob', ['dev', 'mgr'], 40.5)				# Construction calls
+>>> rec2 = Person('Sue', ['dev', 'cto'])
+>>> 
+>>> rec1.jobs, rec2.info()									# Attributes + methods
+(['dev', 'mgr'], ('Sue', ['dev', 'cto']))
+```
+
+
+
+## A More Realistic Example
 
 
 
@@ -522,6 +682,52 @@ One overloading method we will use often here is the `__init__` constructor meth
 
 
 
+
+
+## 面向对象技术简介
+
+- **类(Class): **用来描述具有相同的属性和方法的对象的集合。它定义了该集合中每个对象所共有的属性和方法。对象是类的实例。
+- **类变量：**类变量在整个实例化的对象中是公用的。类变量定义在类中且在函数体之外。类变量通常不作为实例变量使用。
+- **数据成员：**类变量或者实例变量用于处理类及其实例对象的相关的数据。
+- **方法重写：**如果从父类继承的方法不能满足子类的需求，可以对其进行改写，这个过程叫方法的覆盖（override），也称为方法的重写。
+- **实例变量：**定义在方法中的变量，只作用于当前实例的类。
+- **继承：**即一个派生类（derived class）继承基类（base class）的字段和方法。继承也允许把一个派生类的对象作为一个基类对象对待。例如，有这样一个设计：一个Dog类型的对象派生自Animal类，这是模拟"是一个（is-a）"关系（例图，Dog是一个Animal）。
+- **实例化：**创建一个类的实例，类的具体对象。
+- **方法：**类中定义的函数。
+- **对象：**通过类定义的数据结构实例。对象包括两个数据成员（类变量和实例变量）和方法。
+
+### self代表类的实例，而非类
+
+类的方法与普通的函数只有一个特别的区别——它们必须有一个额外的**第一个参数名称**, 按照惯例它的名称是 self。
+
+```python
+>>> class Test:
+...     def prt(self):
+...         print(self)
+...         print(self.__class__)
+... 
+>>> t = Test()
+>>> t.prt()
+<__main__.Test object at 0x1011d6240>
+<class '__main__.Test'>
+```
+
+### 类的专有方法：
+
+- **`__init__` :** 构造函数，在生成对象时调用
+- **`__del__` :** 析构函数，释放对象时使用
+- **`__repr__` :** 打印，转换
+- **`__setitem__` :** 按照索引赋值
+- **`__getitem__`:** 按照索引获取值
+- `__len__`: 获得长度
+- **`__cmp__`:** 比较运算
+- **`__call__`:** 函数调用
+- **`__add__`:** 加运算
+- **`__sub__`:** 减运算
+- **`__mul__`:** 乘运算
+- **`__div__`:** 除运算
+- **`__mod__`:** 求余运算
+- **`__pow__`:** 称方
 
 #### Predefined Class Attributes
 
